# ice_launcher

./: .dockerignore  .gitattributes  .gitignore  ice_launcher.run  pyproject.toml
.github/: renovate.json
.github/workflows/: cleanup-images.yml  docker.yml
docker/: Dockerfile  build.simple  run.simple
ice_launcher/: api.py  config.py  main.py  server.py  sources.py
ice_launcher/metadata/: __init__.py  api.py  health.py  streammeta.py
