[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ice_launcher" # hatchling uses this to discover the top level dir
description = "Stream ffmpeg sources on demand for icecast2"
dynamic = ["version", "readme" ]
dependencies = [
    "requests"
]
requires-python=">=3.10"
authors= [
    { name="Jeremy Sanders" },
    { name="Thomas Johler", email="python@johler.de" }
]

[project.optional-dependencies]
tests      = [ "coverage", "coverage-conditional-plugin" ]

[project.scripts]
ice_launcher = "ice_launcher.main:main"

[project.urls]
Repository = "https://github.com/Herrminator/ice_launcher.git"

[tool.setuptools.dynamic]
version = {attr = "ice_launcher.main.__version__"}

[tool.hatch.version]
path = "ice_launcher/main.py"

# [tool.hatch.build]

# [tool.hatch.metadata.hooks.custom]

[tool.hatch.build.targets.wheel.force-include]
